--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
-	<header></header>
+	<header>
+		<img src="assets/img/nustar-logo.png">
+	</header>
 </body>
 </html>
