Penambahan Konten Button - Header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<img src="assets/img/nustar-logo.png">
-		<button></button>
+		<button>Member Log In</button>
 	</header>
 </body>
 </html>
