Penambahan Tag Div - Header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 	<header>
-		<img src="assets/img/nustar-logo.png">
-		<button>Member Log In</button>
+		<div class="">
+			<img src="assets/img/nustar-logo.png">
+			<button>Member Log In</button>
+		</div>
 	</header>
 </body>
 </html>
