Penambahan Class Header Top - Header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<div class="">
+		<div class="header-top">
 			<img src="assets/img/nustar-logo.png">
 			<button>Member Log In</button>
 		</div>
