Penambahan Header Content Div - Header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			<img src="assets/img/nustar-logo.png">
 			<button>Member Log In</button>
 		</div>
+		<div class="header-content">
+		</div>
 	</header>
 </body>
 </html>
