--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<button>Member Log In</button>
 		</div>
 		<div class="header-content">
-			
+			<p>Halo! Apakah saat ini kamu sedang mencari peluang bisnis yang bisa dijalankan secara fleksibel dan jangka panjang? Yuk simak video berikut.</p>
 		</div>
 	</header>
 </body>
