Penambahan Tag Img - Header Content

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		</div>
 		<div class="header-content">
 			<p>Halo! Apakah saat ini kamu sedang mencari peluang bisnis yang bisa dijalankan secara fleksibel dan jangka panjang? Yuk simak video berikut.</p>
+			<img src="">
 		</div>
 	</header>
 </body>
