Penambahahan Img Header Video - Header Content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="header-content">
 			<p>Halo! Apakah saat ini kamu sedang mencari peluang bisnis yang bisa dijalankan secara fleksibel dan jangka panjang? Yuk simak video berikut.</p>
-			<img src="">
+			<img src="assets/img/header-video.png">
 		</div>
 	</header>
 </body>
