Penambahan Tag Span - Header Content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<button>Member Log In</button>
 		</div>
 		<div class="header-content">
-			<p>Halo! Apakah saat ini kamu sedang mencari <span>peluang bisnis</span> yang bisa dijalankan secara fleksibel dan jangka panjang? Yuk simak video berikut.</p>
+			<p>Halo! Apakah saat ini kamu sedang mencari <span>peluang bisnis</span> yang bisa dijalankan secara <span>fleksibel</span> dan jangka panjang? Yuk simak video berikut.</p>
 			<img src="assets/img/header-video.png">
 		</div>
 	</header>
