--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<img src="assets/img/header-video.png">
 		</div>
 	</header>
-	<div class="main-content">
+	<div class="main">
 
 	</div>
 </body>
