Penambahan Div Class Company Content - Company

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	</header>
 	<div class="company">
 		<img src="assets/img/company-image.png">
+		<div class="company-content">
+			
+		</div>
 	</div>
 </body>
 </html>
