--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="company">
 		<img src="assets/img/company-image.png">
 		<div class="company-content">
-			
+			<h1>Innovative & Strong Company</h1>
 		</div>
 	</div>
 </body>
