--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<img src="assets/img/company-image.png">
 		<div class="company-content">
 			<h1>Innovative & Strong Company</h1>
-			<button></button>
+			<button>Visit Our Company Partner</button>
 		</div>
 	</div>
 </body>
