Penetapan Color - Span H1 Company Content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="company">
 		<img src="assets/img/company-image.png">
 		<div class="company-content">
-			<h1>Innovative & Strong Company</h1>
+			<h1>Innovative & Strong <span>Company</span></h1>
 			<button>Visit Our Company Partner</button>
 		</div>
 	</div>
