Penetapan Padding - Our Stories

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
 			<button>Visit Our Company Partner</button>
 		</div>
 	</div>
+	<div class="our-stories">
+		<h1>Our Stories</h1>
+	</div>
 </body>
 </html>
