Penambahan Paragraph - Our Strories

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	</div>
 	<div class="our-stories">
 		<h1>Our Stories</h1>
+		<p>Cerita dari mereka yang telah memulai bisnis bersama Nu Skin.</p>
 	</div>
 </body>
 </html>
