Penambahan Link CDN - Swiper JS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home - Nustar Digital Academy</title>
+	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
@@ -28,5 +29,8 @@
 		<h1>Our Stories</h1>
 		<p>Cerita dari mereka yang telah memulai bisnis bersama Nu Skin.</p>
 	</div>
+
+	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+	<script type="text/javascript" src="assets/script.js"></script>
 </body>
 </html>
