Penetapan Margin - Card Our Stories

--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
 	<div class="our-stories">
 		<h1>Our Stories</h1>
 		<p>Cerita dari mereka yang telah memulai bisnis bersama Nu Skin.</p>
+		<div class="swiper mySwiper">
+			<div class="swiper-wrapper">
+				<div class="swiper-slide">
+					<div class="card">
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<img src="assets/img/banner.jpeg">
+				</div>
+				<div class="swiper-slide">
+					<img src="assets/img/banner.jpeg">
+				</div>
+				<div class="swiper-slide">
+					<img src="assets/img/banner.jpeg">
+				</div>
+				<div class="swiper-slide">
+					<img src="assets/img/banner.jpeg">
+				</div>
+			</div>
+			<div class="swiper-pagination"></div>
+			<div class="swiper-button-prev"></div>
+    		<div class="swiper-button-next"></div>
+		</div>
 	</div>
 
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
