--- a/index.html
+++ b/index.html
@@ -33,20 +33,47 @@
 				<div class="swiper-slide">
 					<div class="card">
 						<img src="assets/img/testi-user.png">
-						<p>Jangan seperti saya yang sombong dan menutup mata terhadap bisnis Nu Skin selama 8 tahun dan baru akhirnya bergabung di bisnis Nu Skin! Why Nu Skin? Karena akhirnya mata saya terbuka, bahwa ini adalah bisnis yang sangat luar biasa, profesional, dan dapat mengubahkan hidup banyak orang dan membawa mereka pada impian-impian mereka. Peluang bisnis ini adalah peluang terbaik yang pernah saya dapatkan selama ini dan saya akan membangun bisnis ini bersama teman-teman yang mau ambil keputusan dan berkomitmen serta bekerja keras untuk menjadi sukses dan menolong banyak orang.</p>
+						<div class="content">
+							<p>Jangan seperti saya yang sombong dan menutup mata terhadap bisnis Nu Skin selama 8 tahun dan baru akhirnya bergabung di bisnis Nu Skin! Why Nu Skin? Karena akhirnya mata saya terbuka, bahwa ini adalah bisnis yang sangat luar biasa, profesional, dan dapat mengubahkan hidup banyak orang dan membawa mereka pada impian-impian mereka. Peluang bisnis ini adalah peluang terbaik yang pernah saya dapatkan selama ini dan saya akan membangun bisnis ini bersama teman-teman yang mau ambil keputusan dan berkomitmen serta bekerja keras untuk menjadi sukses dan menolong banyak orang.</p>
+							<h4>Efendi Salim</h4>
+						</div>
 					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="assets/img/banner.jpeg">
+					<div class="card">
+						<img src="assets/img/testi-user.png">
+						<div class="content">
+							<p>Jangan seperti saya yang sombong dan menutup mata terhadap bisnis Nu Skin selama 8 tahun dan baru akhirnya bergabung di bisnis Nu Skin! Why Nu Skin? Karena akhirnya mata saya terbuka, bahwa ini adalah bisnis yang sangat luar biasa, profesional, dan dapat mengubahkan hidup banyak orang dan membawa mereka pada impian-impian mereka. Peluang bisnis ini adalah peluang terbaik yang pernah saya dapatkan selama ini dan saya akan membangun bisnis ini bersama teman-teman yang mau ambil keputusan dan berkomitmen serta bekerja keras untuk menjadi sukses dan menolong banyak orang.</p>
+							<h4>Efendi Salim</h4>
+						</div>
+					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="assets/img/banner.jpeg">
+					<div class="card">
+						<img src="assets/img/testi-user.png">
+						<div class="content">
+							<p>Jangan seperti saya yang sombong dan menutup mata terhadap bisnis Nu Skin selama 8 tahun dan baru akhirnya bergabung di bisnis Nu Skin! Why Nu Skin? Karena akhirnya mata saya terbuka, bahwa ini adalah bisnis yang sangat luar biasa, profesional, dan dapat mengubahkan hidup banyak orang dan membawa mereka pada impian-impian mereka. Peluang bisnis ini adalah peluang terbaik yang pernah saya dapatkan selama ini dan saya akan membangun bisnis ini bersama teman-teman yang mau ambil keputusan dan berkomitmen serta bekerja keras untuk menjadi sukses dan menolong banyak orang.</p>
+							<h4>Efendi Salim</h4>
+						</div>
+					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="assets/img/banner.jpeg">
+					<div class="card">
+						<img src="assets/img/testi-user.png">
+						<div class="content">
+							<p>Jangan seperti saya yang sombong dan menutup mata terhadap bisnis Nu Skin selama 8 tahun dan baru akhirnya bergabung di bisnis Nu Skin! Why Nu Skin? Karena akhirnya mata saya terbuka, bahwa ini adalah bisnis yang sangat luar biasa, profesional, dan dapat mengubahkan hidup banyak orang dan membawa mereka pada impian-impian mereka. Peluang bisnis ini adalah peluang terbaik yang pernah saya dapatkan selama ini dan saya akan membangun bisnis ini bersama teman-teman yang mau ambil keputusan dan berkomitmen serta bekerja keras untuk menjadi sukses dan menolong banyak orang.</p>
+							<h4>Efendi Salim</h4>
+						</div>
+					</div>
 				</div>
 				<div class="swiper-slide">
-					<img src="assets/img/banner.jpeg">
+					<div class="card">
+						<img src="assets/img/testi-user.png">
+						<div class="content">
+							<p>Jangan seperti saya yang sombong dan menutup mata terhadap bisnis Nu Skin selama 8 tahun dan baru akhirnya bergabung di bisnis Nu Skin! Why Nu Skin? Karena akhirnya mata saya terbuka, bahwa ini adalah bisnis yang sangat luar biasa, profesional, dan dapat mengubahkan hidup banyak orang dan membawa mereka pada impian-impian mereka. Peluang bisnis ini adalah peluang terbaik yang pernah saya dapatkan selama ini dan saya akan membangun bisnis ini bersama teman-teman yang mau ambil keputusan dan berkomitmen serta bekerja keras untuk menjadi sukses dan menolong banyak orang.</p>
+							<h4>Efendi Salim</h4>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="swiper-pagination"></div>
