Penetapan Styling CSS - Anchor Button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<div class="header-top">
 			<img src="assets/img/nustar-logo.png">
-			<button>Member Log In</button>
+			<button><a href="#">Member Log In</a></button>
 		</div>
 		<div class="header-content">
 			<p>Halo! Apakah saat ini kamu sedang mencari <span>peluang bisnis</span> yang bisa dijalankan secara <span>fleksibel</span> dan <span>jangka panjang</span>? Yuk simak video berikut.</p>
@@ -22,7 +22,7 @@
 		<img src="assets/img/company-image.png">
 		<div class="company-content">
 			<h1>Innovative & Strong <span>Company</span></h1>
-			<button>Visit Our Company Partner</button>
+			<button><a href="#">Visit Our Company Partner</a></button>
 		</div>
 	</div>
 	<div class="our-stories">
