Penambahan Class Member Login

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
     		<div class="swiper-button-next"></div>
 		</div>
 	</div>
+	<div class="member-login">
+		
+	</div>
 
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 	<script type="text/javascript" src="assets/script.js"></script>
