--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		</div>
 	</div>
 	<div class="member-login">
-		
+		<img src="assets/img/member-login.png">
 	</div>
 
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
