Penetapan Display Flex - Member Login

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 		</div>
 	</div>
 	<div class="member-login">
+		<div class="content">
+			<h1>Member Log In</h1>
+		</div>
 		<img src="assets/img/member-login.png">
 	</div>
 
