Penambahan Tag Input - Content Member Login

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 	<div class="member-login">
 		<div class="content">
 			<h1>Member Log In</h1>
+			<input type="text" placeholder="Username">
+			<input type="password" placeholder="Password">
 		</div>
 		<img src="assets/img/member-login.png">
 	</div>
