Penambahan Back To Top - Menu

--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
+
+	<!-- Header -->
 	<header>
 		<div class="header-top">
 			<img src="assets/img/nustar-logo.png">
 			<button><a href="#">Member Log In</a></button>
 		</div>
 		<div class="header-content">
+			<img src="assets/img/ellipse-1.png" class="ellipse-1">
 			<p>Halo! Apakah saat ini kamu sedang mencari <span>peluang bisnis</span> yang bisa dijalankan secara <span>fleksibel</span> dan <span>jangka panjang</span>? Yuk simak video berikut.</p>
 			<img src="assets/img/header-video.png">
 		</div>
 	</header>
+	<img src="assets/img/back-to-top.png" onclick="topFunction()" id="back-to-top">
 	<div class="company">
 		<img src="assets/img/company-image.png">
 		<div class="company-content">
@@ -25,7 +29,10 @@
 			<button><a href="#">Visit Our Company Partner</a></button>
 		</div>
 	</div>
+
+	<!-- Our Stories -->
 	<div class="our-stories">
+		<img src="assets/img/ellipse-2.png" class="ellipse-2">
 		<h1>Our Stories</h1>
 		<p>Cerita dari mereka yang telah memulai bisnis bersama Nu Skin.</p>
 		<div class="swiper mySwiper">
@@ -82,18 +89,30 @@
 				</div>
 			</div>
 			<div class="swiper-pagination"></div>
-			<div class="swiper-button-prev"></div>
-    		<div class="swiper-button-next"></div>
 		</div>
+		<div class="swiper-button-prev"></div>
+    	<div class="swiper-button-next"></div>
+    	<img src="assets/img/ellipse-3.png" class="ellipse-3">
 	</div>
+
+	<!-- Member Login -->
 	<div class="member-login">
 		<div class="content">
 			<h1>Member Log In</h1>
-			<input type="text" placeholder="Username">
-			<input type="password" placeholder="Password">
+			<div class="form">
+				<input type="text" placeholder="Username">
+				<input type="password" placeholder="Password">
+			</div>
+			<button><a href="#">Log In</a></button>
 		</div>
 		<img src="assets/img/member-login.png">
+		<img src="assets/img/ellipse-4.png" class="ellipse-4">
 	</div>
+
+	<!-- Footer -->
+	<footer>
+		<p>©2021Nustar All Rights Reserved | Independent Distributor Produced Website - This website is not produced, approved, endorsed, offered, or recommended by Nu Skin Enterprises United States, Inc. or its affiliates.</p>
+	</footer>
 
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 	<script type="text/javascript" src="assets/script.js"></script>
