Penambahan Button Class Hidden - Company

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	</header>
 	<img src="assets/img/back-to-top.png" onclick="topFunction()" id="back-to-top">
 	<div class="company">
+		<button class="hidden"><a href="#">Visit Our Company Partner</a></button>
 		<img src="assets/img/company-image.png">
 		<div class="company-content">
 			<h1>Innovative & Strong <span>Company</span></h1>
