Penyesuaian Height Swiper Slide - Media Max Width 601px

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<button class="hidden"><a href="#">Visit Our Company Partner</a></button>
 		<img src="assets/img/company-image.png">
 		<div class="company-content">
-			<h1>Innovative & Strong <span>Company</span></h1>
+			<h1>Innovative & Strong<br><span>Company</span></h1>
 			<button><a href="#">Visit Our Company Partner</a></button>
 		</div>
 	</div>
@@ -112,7 +112,7 @@
 
 	<!-- Footer -->
 	<footer>
-		<p>©2021Nustar All Rights Reserved | Independent Distributor Produced Website - This website is not produced, approved, endorsed, offered, or recommended by Nu Skin Enterprises United States, Inc. or its affiliates.</p>
+		<p>&copy; 2021 Nustar All Rights Reserved | Independent Distributor Produced Website - This website is not produced, approved, endorsed, offered, or recommended by Nu Skin Enterprises United States, Inc. or its affiliates.</p>
 	</footer>
 
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
