--- a/login/member-area.html
+++ b/login/member-area.html
@@ -12,7 +12,7 @@
 	<header>
 		<img src="../assets/img/nustar-logo.png">
 		<div>
-			<h4>Home</h4>
+			<h4><a href="#">Home</a></h4>
 		</div>
 	</header>
 </body>
