Penghapusan Button Header Top - Index HTML

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="header-top">
 			<img src="assets/img/nustar-logo.png">
-			<button><a href="#">Member Log In</a></button>
+			<a href="#">Member Log In</a>
 		</div>
 		<div class="header-content">
 			<img src="assets/img/ellipse-1.png" class="ellipse-1">
