Penghapusan Button Company - Index HTML

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<img src="assets/img/company-image.png">
 		<div class="company-content">
 			<h1>Innovative & Strong<br><span>Company</span></h1>
-			<button><a href="#">Visit Our Company Partner</a></button>
+			<a href="#" class="hide">Visit Our Company Partner</a>
 		</div>
 	</div>
 
