Penghapusan Button Member Login - Index HTML

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<input type="text" placeholder="Username">
 				<input type="password" placeholder="Password">
 			</div>
-			<button><a href="#">Log In</a></button>
+			<a href="#">Log In</a>
 		</div>
 		<img src="assets/img/member-login.png">
 		<img src="assets/img/ellipse-4.png" class="ellipse-4">
