Penambahan Tag Span - Div Header Member Area

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -13,6 +13,7 @@
 		<img src="../assets/img/nustar-logo.png">
 		<div>
 			<h4><a href="#">Home</a></h4>
+			<span></span>
 			<h4><a href="#">Log Out</a></h4>
 		</div>
 	</header>
