--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 	</header>
 	<img src="assets/img/back-to-top.png" onclick="topFunction()" id="back-to-top">
 	<div class="company">
-		<button class="hidden"><a href="#">Visit Our Company Partner</a></button>
+		<a href="#" class="hidden">Visit Our Company Partner</a>
 		<img src="assets/img/company-image.png">
 		<div class="company-content">
 			<h1>Innovative & Strong<br><span>Company</span></h1>
-			<a href="#" class="hide">Visit Our Company Partner</a>
+			<a href="#">Visit Our Company Partner</a>
 		</div>
 	</div>
 
