--- a/login/member-area.html
+++ b/login/member-area.html
@@ -19,10 +19,10 @@
 	</header>
 	<div class="container">
 		<div class="sidebar">
-
+			<h4>Member Area</h4>
 		</div>
 		<div class="main">
-			
+
 		</div>
 	</div>
 </body>
