Penambahan Konten H4 - Sidebar Container Member Area HTML

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -20,6 +20,9 @@
 	<div class="container">
 		<div class="sidebar">
 			<h4>Member Area</h4>
+			<h4>Member Area</h4>
+			<h4>Member Area</h4>
+			<h4>Member Area</h4>
 		</div>
 		<div class="main">
 
