--- a/login/member-area.html
+++ b/login/member-area.html
@@ -19,7 +19,7 @@
 	</header>
 	<div class="container">
 		<div class="sidebar">
-			<h4>Member Area</h4>
+			<h4 class="active">Member Area</h4>
 			<h4>Member Area</h4>
 			<h4>Member Area</h4>
 			<h4>Member Area</h4>
