--- a/login/member-area.html
+++ b/login/member-area.html
@@ -20,9 +20,10 @@
 	<div class="container">
 		<div class="sidebar">
 			<h4 class="active">Member Area</h4>
-			<h4>Member Area</h4>
-			<h4>Member Area</h4>
-			<h4>Member Area</h4>
+			<h4>Cara Memulai</h4>
+			<h4>Mindset Training</h4>
+			<h4>Skil Training</h4>
+			<h4>Product Knowledge</h4>
 		</div>
 		<div class="main">
 
