--- a/login/member-area.html
+++ b/login/member-area.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Member Area - Nustar Digital Academy</title>
-	<link rel="stylesheet" type="text/css" href="../assets/login.css">
+	<link rel="stylesheet" type="text/css" href="../assets/css/login.css">
 </head>
 <body>
 
@@ -28,7 +28,7 @@
 		<div class="main">
 			<h2>Member Area</h2>
 			<div class="card">
-				
+
 			</div>
 		</div>
 	</div>
