Penambahan Komentar Penanda - Container Member Area

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -17,7 +17,11 @@
 			<h4><a href="#">Log Out</a></h4>
 		</div>
 	</header>
+
+	<!-- Container -->
 	<div class="container">
+
+		<!-- Sidebar (Left) -->
 		<div class="sidebar">
 			<h4 class="active">Member Area</h4>
 			<h4>Cara Memulai</h4>
@@ -25,6 +29,8 @@
 			<h4>Skil Training</h4>
 			<h4>Product Knowledge</h4>
 		</div>
+
+		<!-- Main (Right) -->
 		<div class="main">
 			<h2>Member Area</h2>
 			<div class="card">
