Penetapan Width & Height - Img Card Main Login CSS

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -34,7 +34,7 @@
 		<div class="main">
 			<h2>Member Area</h2>
 			<div class="card">
-
+				<img src="../assets/img/header-video.png">
 			</div>
 		</div>
 	</div>
