Penambahan Konten Footer - Member Area

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -41,7 +41,7 @@
 
 	<!-- Footer -->
 	<footer>
-		
+		<p>&copy; 2021 Nustar All Rights Reserved | Independent Distributor Produced Website - This website is not produced, approved, endorsed, offered, or recommended by Nu Skin Enterprises United States, Inc. or its affiliates.</p>
 	</footer>
 </body>
 </html>
