Penambahan Script Login JS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="header-top">
 			<img src="assets/img/nustar-logo.png">
-			<a href="#">Member Log In</a>
+			<a href="login/member-area.html">Member Log In</a>
 		</div>
 		<div class="header-content">
 			<img src="assets/img/ellipse-1.png" class="ellipse-1">
@@ -116,6 +116,6 @@
 	</footer>
 
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-	<script type="text/javascript" src="assets/script.js"></script>
+	<script type="text/javascript" src="assets/js/script.js"></script>
 </body>
-</html>
+</html><
