--- a/login/member-area.html
+++ b/login/member-area.html
@@ -12,11 +12,12 @@
 	<header>
 		<img src="../assets/img/nustar-logo.png">
 		<div>
-			<h4><a href="#">Home</a></h4>
+			<h4><a href="../index.html">Home</a></h4>
 			<span>|</span>
-			<h4><a href="#">Log Out</a></h4>
+			<h4><a href="../index.html">Log Out</a></h4>
 		</div>
 	</header>
+	<img src="../assets/img/back-to-top.png" onclick="topFunction()" id="back-to-top">
 
 	<!-- Container -->
 	<div class="container">
@@ -32,9 +33,11 @@
 
 		<!-- Main (Right) -->
 		<div class="main">
-			<h2>Member Area</h2>
-			<div class="card">
-				<img src="../assets/img/header-video.png">
+			<div>
+				<h2>Member Area</h2>
+				<div class="card">
+					<img src="../assets/img/header-video.png">
+				</div>
 			</div>
 
 			<!-- Footer -->
@@ -43,5 +46,7 @@
 			</footer>
 		</div>
 	</div>
+
+	<script type="text/javascript" src="../assets/js/login.js"></script>
 </body>
 </html>
