Penambahan Media Query CSS - Responsive Member Area HTML

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -10,24 +10,42 @@
 
 	<!-- Header -->
 	<header>
-		<img src="../assets/img/nustar-logo.png">
-		<div>
+		<img src="../assets/img/nustar-logo.png" class="logo">
+		<div class="nav">
 			<h4><a href="../index.html">Home</a></h4>
 			<span>|</span>
 			<h4><a href="../index.html">Log Out</a></h4>
+		</div>
+
+		<!-- Sidebar Navigation -->
+		<div class="btn-menu">
+			<img src="../assets/img/menu.png">
+		</div>
+		<div class="btn-close">
+			<img src="../assets/img/close-menu.png">
+		</div>
+		<div class="side-nav">
+			<div class="sidebar">
+				<h4 class="active">Member Area</h4>
+				<h4>Cara Memulai</h4>
+				<h4>Mindset Training</h4>
+				<h4>Skill Training</h4>
+				<h4>Product Knowledge</h4>
+			</div>
 		</div>
 	</header>
 	<img src="../assets/img/back-to-top.png" onclick="topFunction()" id="back-to-top">
 
 	<!-- Container -->
 	<div class="container">
-
+		<div class="dark"></div>
+		
 		<!-- Sidebar (Left) -->
 		<div class="sidebar">
 			<h4 class="active">Member Area</h4>
 			<h4>Cara Memulai</h4>
 			<h4>Mindset Training</h4>
-			<h4>Skil Training</h4>
+			<h4>Skill Training</h4>
 			<h4>Product Knowledge</h4>
 		</div>
 
@@ -47,6 +65,7 @@
 		</div>
 	</div>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script type="text/javascript" src="../assets/js/login.js"></script>
 </body>
 </html>
