--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Member Area - Nustar Digital Academy</title>
+	<title>Cara Memulai - Nustar Digital Academy</title>
 	<link rel="stylesheet" type="text/css" href="../assets/css/login.css">
 </head>
 <body>
