Penambahan Konten Cara Memulai HTML

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -7,6 +7,33 @@
 	<link rel="stylesheet" type="text/css" href="../assets/css/login.css">
 </head>
 <body>
+	
+	<!-- Header -->
+	<header>
+		<img src="../assets/img/nustar-logo.png" class="logo">
+		<div class="nav">
+			<h4><a href="../index.html">Home</a></h4>
+			<span>|</span>
+			<h4><a href="../index.html">Log Out</a></h4>
+		</div>
 
+		<!-- Sidebar Navigation -->
+		<div class="btn-menu">
+			<img src="../assets/img/menu.png">
+		</div>
+		<div class="btn-close">
+			<img src="../assets/img/close-menu.png">
+		</div>
+		<div class="side-nav">
+			<div class="sidebar">
+				<h4 class="active">Member Area</h4>
+				<h4>Cara Memulai</h4>
+				<h4>Mindset Training</h4>
+				<h4>Skill Training</h4>
+				<h4>Product Knowledge</h4>
+			</div>
+		</div>
+	</header>
+	<img src="../assets/img/back-to-top.png" onclick="topFunction()" id="back-to-top">
 </body>
 </html>
