--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../assets/css/login.css">
 </head>
 <body>
-	
+
 	<!-- Header -->
 	<header>
 		<img src="../assets/img/nustar-logo.png" class="logo">
@@ -35,5 +35,37 @@
 		</div>
 	</header>
 	<img src="../assets/img/back-to-top.png" onclick="topFunction()" id="back-to-top">
+
+	<!-- Container -->
+	<div class="container">
+		<div class="dark"></div>
+		
+		<!-- Sidebar (Left) -->
+		<div class="sidebar">
+			<h4 class="active">Member Area</h4>
+			<h4>Cara Memulai</h4>
+			<h4>Mindset Training</h4>
+			<h4>Skill Training</h4>
+			<h4>Product Knowledge</h4>
+		</div>
+
+		<!-- Main (Right) -->
+		<div class="main">
+			<div>
+				<h2>Member Area</h2>
+				<div class="card">
+					<img src="../assets/img/header-video.png">
+				</div>
+			</div>
+
+			<!-- Footer -->
+			<footer>
+				<p>&copy; 2021 Nustar All Rights Reserved | Independent Distributor Produced Website - This website is not produced, approved, endorsed, offered, or recommended by Nu Skin Enterprises United States, Inc. or its affiliates.</p>
+			</footer>
+		</div>
+	</div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script type="text/javascript" src="../assets/js/login.js"></script>
 </body>
 </html>
