Penyesuaian Konten H2 -  Main Container Cara Memulai

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -52,7 +52,7 @@
 		<!-- Main (Right) -->
 		<div class="main">
 			<div>
-				<h2>Member Area</h2>
+				<h2>Cara Memulai</h2>
 				<div class="card">
 					<img src="../assets/img/header-video.png">
 				</div>
