Penyesuaian Class Active - Sidebar Container Cara Memulai

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -42,8 +42,8 @@
 		
 		<!-- Sidebar (Left) -->
 		<div class="sidebar">
-			<h4 class="active">Member Area</h4>
-			<h4>Cara Memulai</h4>
+			<h4>Member Area</h4>
+			<h4 class="active">Cara Memulai</h4>
 			<h4>Mindset Training</h4>
 			<h4>Skill Training</h4>
 			<h4>Product Knowledge</h4>
