--- a/login/member-area.html
+++ b/login/member-area.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Member Area - Nustar Digital Academy</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="../assets/css/login.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
 
 		<!-- Sidebar Navigation -->
 		<div class="btn-menu">
-			<img src="../assets/img/menu.png">
+			<i class="fas fa-bars"></i>
 		</div>
 		<div class="btn-close">
 			<img src="../assets/img/close-menu.png">
