Penyesuaian Icon Close - Member Area

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -23,7 +23,7 @@
 			<i class="fas fa-bars"></i>
 		</div>
 		<div class="btn-close">
-			<img src="../assets/img/close-menu.png">
+			<i class="fas fa-times"></i>
 		</div>
 		<div class="side-nav">
 			<div class="sidebar">
