--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -54,6 +54,44 @@
 			<div>
 				<h2>Cara Memulai</h2>
 				<div class="card">
+					<div class="accordion">
+						<div class="content_box">
+							<div class="label">List One</div>
+							<div class="content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+								consequat.</p>
+							</div>
+						</div>
+						<div class="content_box">
+							<div class="label">List Two</div>
+							<div class="content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+								consequat.</p>
+							</div>
+						</div>
+						<div class="content_box">
+							<div class="label">List Three</div>
+							<div class="content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+								consequat.</p>
+							</div>
+						</div>
+						<div class="content_box">
+							<div class="label">List Four</div>
+							<div class="content">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+								consequat.</p>
+							</div>
+						</div>
+					</div>
 					<img src="../assets/img/header-video.png">
 				</div>
 			</div>
