--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -19,10 +19,10 @@
 
 		<!-- Sidebar Navigation -->
 		<div class="btn-menu">
-			<img src="../assets/img/menu.png">
+			<i class="fas fa-bars"></i>
 		</div>
 		<div class="btn-close">
-			<img src="../assets/img/close-menu.png">
+			<i class="fas fa-times"></i>
 		</div>
 		<div class="side-nav">
 			<div class="sidebar">
