Penyesuaian Konten Title Box - Content Box Accordion

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -56,7 +56,9 @@
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
-							<div class="label">List One</div>
+							<div class="title-box">
+								Apa itu System?
+							</div>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -65,7 +67,7 @@
 							</div>
 						</div>
 						<div class="content_box">
-							<div class="label">List Two</div>
+							<div class="label">Why System?</div>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
