Penambahan CDN Font Awesome - Cara Memulai

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cara Memulai - Nustar Digital Academy</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="../assets/css/login.css">
 </head>
 <body>
@@ -57,7 +58,7 @@
 					<div class="accordion">
 						<div class="content_box">
 							<div class="title-box">
-								Apa itu System?
+								<h4>Apa itu System?</h4>
 							</div>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
