--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -59,6 +59,7 @@
 						<div class="content_box">
 							<div class="title-box">
 								<h4>Apa itu System?</h4>
+								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
