--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -57,7 +57,7 @@
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
-							<div class="title-box">
+							<div class="title">
 								<h4>Apa itu System?</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
