Penyesuaian Konten - Content Accordion

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -62,41 +62,37 @@
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat.</p>
+								<img src="../assets/img/header-video.png">
 							</div>
 						</div>
 						<div class="content_box">
-							<div class="label">Why System?</div>
+							<div class="title">
+								<h4>Apa itu System?</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat.</p>
+								<img src="../assets/img/header-video.png">
 							</div>
 						</div>
 						<div class="content_box">
-							<div class="label">List Three</div>
+							<div class="title">
+								<h4>Apa itu System?</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat.</p>
+								<img src="../assets/img/header-video.png">
 							</div>
 						</div>
 						<div class="content_box">
-							<div class="label">List Four</div>
+							<div class="title">
+								<h4>Apa itu System?</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat.</p>
+								<img src="../assets/img/header-video.png">
 							</div>
 						</div>
 					</div>
-					<img src="../assets/img/header-video.png">
 				</div>
 			</div>
 
