--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -56,7 +56,7 @@
 				<h2>Cara Memulai</h2>
 				<div class="card">
 					<div class="accordion">
-						<div class="content_box">
+						<div class="content_box active">
 							<div class="title">
 								<h4>Apa itu System?</h4>
 								<i class="fas fa-chevron-down"></i>
