--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -68,7 +68,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Apa itu System?</h4>
+								<h4>Why System?</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -78,7 +78,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Apa itu System?</h4>
+								<h4>Cara Daftar Member Baru</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -88,7 +88,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Apa itu System?</h4>
+								<h4>Cara Order Online CC</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
