--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -98,7 +98,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Cara Order Online CC</h4>
+								<h4>Cara Order Online Via Transfer</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -108,7 +108,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Cara Order Online CC</h4>
+								<h4>Custom Reward</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
