Penambahan Tag Anchor - H4 Sidebar & Side-Nav Member Area

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -28,7 +28,7 @@
 		<div class="side-nav">
 			<div class="sidebar">
 				<h4 class="active">Member Area</h4>
-				<h4>Cara Memulai</h4>
+				<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
 				<h4>Mindset Training</h4>
 				<h4>Skill Training</h4>
 				<h4>Product Knowledge</h4>
@@ -44,7 +44,7 @@
 		<!-- Sidebar (Left) -->
 		<div class="sidebar">
 			<h4 class="active">Member Area</h4>
-			<h4>Cara Memulai</h4>
+			<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
 			<h4>Mindset Training</h4>
 			<h4>Skill Training</h4>
 			<h4>Product Knowledge</h4>
