Penetapan Color - H4 Sidebar & Side-Nav

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="side-nav">
 			<div class="sidebar">
-				<h4 class="active">Member Area</h4>
+				<h4 class="active"><a href="member-area.html">Member Area</a></h4>
 				<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
 				<h4>Mindset Training</h4>
 				<h4>Skill Training</h4>
