Penetapan Display None - Dark Class in Media Min Width 1127px

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -29,7 +29,7 @@
 			<div class="sidebar">
 				<h4 class="active"><a href="member-area.html">Member Area</a></h4>
 				<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
-				<h4>Mindset Training</h4>
+				<h4><a href="mindset-training.html">Mindset Training</a></h4>
 				<h4>Skill Training</h4>
 				<h4>Product Knowledge</h4>
 			</div>
