Penambahan Tag Nachor - H4 Sidebar & Sidenav

--- a/login/member-area.html
+++ b/login/member-area.html
@@ -30,8 +30,8 @@
 				<h4 class="active"><a href="member-area.html">Member Area</a></h4>
 				<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
 				<h4><a href="mindset-training.html">Mindset Training</a></h4>
-				<h4>Skill Training</h4>
-				<h4>Product Knowledge</h4>
+				<h4><a href="skill-training.html">Skill Training</a></h4>
+				<h4><a href="product-knowledge">Product Knowledge</a></h4>
 			</div>
 		</div>
 	</header>
@@ -43,11 +43,11 @@
 		
 		<!-- Sidebar (Left) -->
 		<div class="sidebar">
-			<h4 class="active">Member Area</h4>
+			<h4 class="active"><a href="member-area.html">Member Area</a></h4>
 			<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
-			<h4>Mindset Training</h4>
-			<h4>Skill Training</h4>
-			<h4>Product Knowledge</h4>
+			<h4><a href="mindset-training.html">Mindset Training</a></h4>
+			<h4><a href="skill-training.html">Skill Training</a></h4>
+			<h4><a href="product-knowledge">Product Knowledge</a></h4>
 		</div>
 
 		<!-- Main (Right) -->
