--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -26,12 +26,15 @@
 			<i class="fas fa-times"></i>
 		</div>
 		<div class="side-nav">
-			<div class="sidebar">
-				<h4>Member Area</h4>
-				<h4 class="active">Cara Memulai</h4>
-				<h4>Mindset Training</h4>
-				<h4>Skill Training</h4>
-				<h4>Product Knowledge</h4>
+			<h4><a href="member-area.html">Member Area</a></h4>
+			<h4 class="active"><a href="cara-memulai.html">Cara Memulai</a></h4>
+			<h4><a href="mindset-training.html">Mindset Training</a></h4>
+			<h4><a href="skill-training.html">Skill Training</a></h4>
+			<h4><a href="product-knowledge">Product Knowledge</a></h4>
+			<div class="bottom">
+				<h4><a href="../index.html">Home</a></h4>
+				<span>|</span>
+				<h4><a href="../index.html">Log Out</a></h4>
 			</div>
 		</div>
 	</header>
@@ -43,11 +46,11 @@
 		
 		<!-- Sidebar (Left) -->
 		<div class="sidebar">
-			<h4>Member Area</h4>
-			<h4 class="active">Cara Memulai</h4>
-			<h4>Mindset Training</h4>
-			<h4>Skill Training</h4>
-			<h4>Product Knowledge</h4>
+			<h4><a href="member-area.html">Member Area</a></h4>
+			<h4 class="active"><a href="cara-memulai.html">Cara Memulai</a></h4>
+			<h4><a href="mindset-training.html">Mindset Training</a></h4>
+			<h4><a href="skill-training.html">Skill Training</a></h4>
+			<h4><a href="product-knowledge">Product Knowledge</a></h4>
 		</div>
 
 		<!-- Main (Right) -->
