--- a/login/member-area.html
+++ b/login/member-area.html
@@ -46,11 +46,13 @@
 		
 		<!-- Sidebar (Left) -->
 		<div class="sidebar">
-			<h4 class="active"><a href="member-area.html">Member Area</a></h4>
-			<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
-			<h4><a href="mindset-training.html">Mindset Training</a></h4>
-			<h4><a href="skill-training.html">Skill Training</a></h4>
-			<h4><a href="product-knowledge">Product Knowledge</a></h4>
+			<div class="content">
+				<h4 class="active"><a href="member-area.html">Member Area</a></h4>
+				<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
+				<h4><a href="mindset-training.html">Mindset Training</a></h4>
+				<h4><a href="skill-training.html">Skill Training</a></h4>
+				<h4><a href="product-knowledge">Product Knowledge</a></h4>
+			</div>
 		</div>
 
 		<!-- Main (Right) -->
