--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -47,8 +47,8 @@
 		<!-- Sidebar (Left) -->
 		<div class="sidebar">
 			<div class="content">
-				<h4 class="active"><a href="member-area.html">Member Area</a></h4>
-				<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
+				<h4><a href="member-area.html">Member Area</a></h4>
+				<h4 class="active"><a href="cara-memulai.html">Cara Memulai</a></h4>
 				<h4><a href="mindset-training.html">Mindset Training</a></h4>
 				<h4><a href="skill-training.html">Skill Training</a></h4>
 				<h4><a href="product-knowledge">Product Knowledge</a></h4>
