--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -57,70 +57,73 @@
 
 		<!-- Main (Right) -->
 		<div class="main">
-			<h2>Cara Memulai</h2>
-			<div class="card">
-				<div class="accordion">
-					<div class="content_box active">
-						<div class="title">
-							<h4>Apa itu System?</h4>
-							<i class="fas fa-chevron-down"></i>
+			<div>
+				<h2>Cara Memulai</h2>
+				<div class="card">
+					<div class="accordion">
+						<div class="content_box active">
+							<div class="title">
+								<h4>Apa itu System?</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
 						</div>
-						<div class="content">
-							<img src="../assets/img/header-video.png">
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Why System?</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
 						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Cara Daftar Member Baru</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Cara Order Online CC</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Cara Order Online Via Transfer</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Custom Reward</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
 					</div>
-					<hr>
-					<div class="content_box">
-						<div class="title">
-							<h4>Why System?</h4>
-							<i class="fas fa-chevron-down"></i>
-						</div>
-						<div class="content">
-							<img src="../assets/img/header-video.png">
-						</div>
-					</div>
-					<hr>
-					<div class="content_box">
-						<div class="title">
-							<h4>Cara Daftar Member Baru</h4>
-							<i class="fas fa-chevron-down"></i>
-						</div>
-						<div class="content">
-							<img src="../assets/img/header-video.png">
-						</div>
-					</div>
-					<hr>
-					<div class="content_box">
-						<div class="title">
-							<h4>Cara Order Online CC</h4>
-							<i class="fas fa-chevron-down"></i>
-						</div>
-						<div class="content">
-							<img src="../assets/img/header-video.png">
-						</div>
-					</div>
-					<hr>
-					<div class="content_box">
-						<div class="title">
-							<h4>Cara Order Online Via Transfer</h4>
-							<i class="fas fa-chevron-down"></i>
-						</div>
-						<div class="content">
-							<img src="../assets/img/header-video.png">
-						</div>
-					</div>
-					<hr>
-					<div class="content_box">
-						<div class="title">
-							<h4>Custom Reward</h4>
-							<i class="fas fa-chevron-down"></i>
-						</div>
-						<div class="content">
-							<img src="../assets/img/header-video.png">
-						</div>
-					</div>
-					<hr>
 				</div>
+				<h3>1. Goal Setting</h3>
 			</div>
 
 			<!-- Footer -->
