--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -124,6 +124,40 @@
 					</div>
 				</div>
 				<h3>1. Goal Setting</h3>
+				<div class="card">
+					<div class="accordion">
+						<div class="content_box">
+							<div class="title">
+								<h4>Why System?</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Cara Order Online Via Transfer</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Custom Reward</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+					</div>
+				</div>
 			</div>
 
 			<!-- Footer -->
