--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -128,7 +128,7 @@
 					<div class="accordion">
 						<div class="content_box">
 							<div class="title">
-								<h4>Why System?</h4>
+								<h4>Pentingnya Goal Setting</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -139,6 +139,16 @@
 						<div class="content_box">
 							<div class="title">
 								<h4>Cara Order Online Via Transfer</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Custom Reward</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
