--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -138,7 +138,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Cara Order Online Via Transfer</h4>
+								<h4>Velocity</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
