--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -148,7 +148,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Custom Reward</h4>
+								<h4>Goal Setting Executive</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
