--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -158,7 +158,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Custom Reward</h4>
+								<h4>Goal Setting Ruby</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
