--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -123,6 +123,53 @@
 						<hr>
 					</div>
 				</div>
+
+				<h3>1. Goal Setting</h3>
+				<div class="card">
+					<div class="accordion">
+						<div class="content_box">
+							<div class="title">
+								<h4>Pentingnya Goal Setting</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Velocity</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Goal Setting Executive</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Goal Setting Ruby</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+					</div>
+				</div>
+
 				<h3>1. Goal Setting</h3>
 				<div class="card">
 					<div class="accordion">
