Penyesuaian Konten H3 - Card Main Cara Memulai

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -170,7 +170,7 @@
 					</div>
 				</div>
 
-				<h3>1. Goal Setting</h3>
+				<h3>2. Daftar Nama</h3>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
