--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -175,7 +175,7 @@
 					<div class="accordion">
 						<div class="content_box">
 							<div class="title">
-								<h4>Pentingnya Goal Setting</h4>
+								<h4>Membuat Daftar Nama</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
