--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -185,6 +185,22 @@
 						<hr>
 					</div>
 				</div>
+
+				<h3>2. Daftar Nama</h3>
+				<div class="card">
+					<div class="accordion">
+						<div class="content_box">
+							<div class="title">
+								<h4>Membuat Daftar Nama</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+					</div>
+				</div>
 			</div>
 
 			<!-- Footer -->
