Penyesuaian Konten H3 - Main Cara Memulai

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -186,7 +186,7 @@
 					</div>
 				</div>
 
-				<h3>2. Daftar Nama</h3>
+				<h3>3. Cara Mengundang</h3>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
