Penambahan Content Box Card Main - Cara Memulai

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -199,6 +199,16 @@
 							</div>
 						</div>
 						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Teknik Inviting</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
 					</div>
 				</div>
 			</div>
