--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -212,7 +212,7 @@
 					</div>
 				</div>
 
-				<h3>3. Cara Mengundang</h3>
+				<h3>4. Presentasi</h3>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
