--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -217,7 +217,7 @@
 					<div class="accordion">
 						<div class="content_box">
 							<div class="title">
-								<h4>Mindset Inviting</h4>
+								<h4>Presentasi</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
