--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -227,7 +227,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Teknik Inviting</h4>
+								<h4>Forming (Presentasi)</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
