--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -238,7 +238,7 @@
 					</div>
 				</div>
 
-				<h3>4. Presentasi</h3>
+				<h3>5. Closing</h3>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
