--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -253,7 +253,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Forming (Presentasi)</h4>
+								<h4>Strategi Closing Banyak</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
