Penyesuaian Konten H3 Main - Cara Memulai

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -264,7 +264,7 @@
 					</div>
 				</div>
 
-				<h3>5. Closing</h3>
+				<h3>6. Follow Up</h3>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
