--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -280,7 +280,7 @@
 					</div>
 				</div>
 
-				<h3>5. Closing</h3>
+				<h3>7. Team Player</h3>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box">
