--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -269,7 +269,7 @@
 					<div class="accordion">
 						<div class="content_box">
 							<div class="title">
-								<h4>Closing</h4>
+								<h4>Follow Up</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
