--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -285,7 +285,7 @@
 					<div class="accordion">
 						<div class="content_box">
 							<div class="title">
-								<h4>Closing</h4>
+								<h4>Team Player</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
