--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -167,7 +167,7 @@
 							</div>
 						</div>
 						<hr>
-						<a href="#">Baca Materi</a>
+						<a href="#"><i class="fas fa-file-pdf"></i>Baca Materi</a>
 					</div>
 				</div>
 
