Penambahan Class Button Pembungkus Anchor - Main Login CSS

--- a/login/cara-memulai.html
+++ b/login/cara-memulai.html
@@ -167,7 +167,9 @@
 							</div>
 						</div>
 						<hr>
-						<a href="#"><i class="fas fa-file-pdf"></i>Baca Materi</a>
+						<div class="button">
+							<a href="#"><i class="fas fa-file-pdf"></i>Baca Materi</a>
+						</div>
 					</div>
 				</div>
 
