Penyesuaian Konten H2 - Main Mindset Training

--- a/login/mindset-training.html
+++ b/login/mindset-training.html
@@ -58,7 +58,7 @@
 		<!-- Main (Right) -->
 		<div class="main">
 			<div>
-				<h2>Cara Memulai</h2>
+				<h2>Mindset Training</h2>
 				<div class="card">
 					<div class="accordion">
 						<div class="content_box active">
