Penyesuaian Konten H4 - Title Content Box Main Mindset Training

--- a/login/mindset-training.html
+++ b/login/mindset-training.html
@@ -63,7 +63,17 @@
 					<div class="accordion">
 						<div class="content_box active">
 							<div class="title">
-								<h4>Apa itu System?</h4>
+								<h4>Why Business?</h4>
+								<i class="fas fa-chevron-down"></i>
+							</div>
+							<div class="content">
+								<img src="../assets/img/header-video.png">
+							</div>
+						</div>
+						<hr>
+						<div class="content_box">
+							<div class="title">
+								<h4>Why MLM?</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
@@ -83,37 +93,7 @@
 						<hr>
 						<div class="content_box">
 							<div class="title">
-								<h4>Cara Daftar Member Baru</h4>
-								<i class="fas fa-chevron-down"></i>
-							</div>
-							<div class="content">
-								<img src="../assets/img/header-video.png">
-							</div>
-						</div>
-						<hr>
-						<div class="content_box">
-							<div class="title">
-								<h4>Cara Order Online CC</h4>
-								<i class="fas fa-chevron-down"></i>
-							</div>
-							<div class="content">
-								<img src="../assets/img/header-video.png">
-							</div>
-						</div>
-						<hr>
-						<div class="content_box">
-							<div class="title">
-								<h4>Cara Order Online Via Transfer</h4>
-								<i class="fas fa-chevron-down"></i>
-							</div>
-							<div class="content">
-								<img src="../assets/img/header-video.png">
-							</div>
-						</div>
-						<hr>
-						<div class="content_box">
-							<div class="title">
-								<h4>Custom Reward</h4>
+								<h4>Pentingnya Goal Setting</h4>
 								<i class="fas fa-chevron-down"></i>
 							</div>
 							<div class="content">
