--- a/login/mindset-training.html
+++ b/login/mindset-training.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cara Memulai - Nustar Digital Academy</title>
+	<title>Mindset Training - Nustar Digital Academy</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="../assets/css/login.css">
 </head>
